# dataVals

./: README.md  campaignStats.py  deviceTypeCampaignStats.py  output.csv  output.xlsx  output_49550_220129.csv  output_49551_220131.csv  output_49552_220128.csv  output_49553_220130.csv  publishResults.py  pyproject.toml  table_template.html
publishReports/: app.py  index.html  indexCss.html
sql_files/: bidWinStats.sql  bidsVsWins.sql  budget.sql  conversitons.sql  dco.sql  device_budget.sql  hourly_budget.sql  queries.json  recency.sql  spend.sql  spendDataDays.sql
